--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -42,13 +42,16 @@
     border: 0;
     box-shadow: none;
     color: var(--blue);
-    text-shadow: 1px 1px 2px white;
-    text-transform: uppercase;
-    font-weight: 900;
+    text-shadow: 0px 0px 1px rgba(12, 59, 77, 0.5);
+    
+    font-weight: 400;
     font-family: "Inter Variable";
     letter-spacing: 1.5px;
-    
-    
+}
+
+.custom-tooltip{
+    padding: 10px;
+    margin-top: -15px;
 }
 
 
