--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -16,6 +16,7 @@
 /*required map size*/
 .leaflet-container {
     height: 100vh;
+    width: 100%;
 }
 
 .leaflet-control {
@@ -31,27 +32,56 @@
     z-index: 0 !important
 }
 
-.glass-card{
+.glass-card {
     background-color: rgba(255, 255, 255, 0.4) !important;
     background-image: linear-gradient(to bottom right, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0)) !important;
     backdrop-filter: blur(7px);
 }
 
-.tooltip-municity-name{
-    background-color: transparent;
-    border: 0;
-    box-shadow: none;
-    color: var(--blue);
-    text-shadow: 0px 0px 1px rgba(12, 59, 77, 0.5);
-    
-    font-weight: 400;
-    font-family: "Inter Variable";
-    letter-spacing: 1.5px;
+.geosearch-control {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    z-index: 1000;
+    background: white;
+    padding: 8px;
+    border-radius: 4px;
+    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.2);
+    pointer-events: "auto";
+    cursor: "none";
 }
 
-.custom-tooltip{
-    padding: 10px;
-    margin-top: -15px;
+.geosearch-input {
+    width: 200px;
+    padding: 6px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+}
+
+.suggestions {
+    margin-top: 8px;
+}
+
+.suggestion {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px;
+    border-bottom: 1px solid #f1f1f1;
+}
+
+.suggestion span {
+    font-size: 0.9em;
+}
+
+.suggestion button {
+    padding: 4px 6px;
+    font-size: 0.9em;
+    cursor: pointer;
+    background-color: #0078d4;
+    color: white;
+    border: none;
+    border-radius: 4px;
 }
 
 
