--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -32,7 +32,7 @@
     z-index: 0 !important
 }
 
-.glass-card {
+.glass {
     background-color: rgba(255, 255, 255, 0.4) !important;
     background-image: linear-gradient(to bottom right, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0)) !important;
     backdrop-filter: blur(7px);
@@ -84,4 +84,15 @@
     border-radius: 4px;
 }
 
+.leaflet-bar.leaflet-control{
+    border: none;
+}
+
+.leaflet-control{
+    margin-top: 63px !important;
+}
+
+.app-bar{
+    min-height: 53px !important;
+}
 
