Stylize forecast popup. Add button to show full forecast inside popup. Create custom icons for rainfall and cloud cover weather data.

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -96,3 +96,14 @@
     min-height: 53px !important;
 }
 
+.leaflet-popup-content-wrapper, .leaflet-popup-tip{
+    background-color: transparent !important;
+    box-shadow: none !important;
+    
+}
+
+.leaflet-popup-content, .leaflet-popup-content p{
+    margin: 0 !important;
+}
+
+
