--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -32,11 +32,27 @@
     z-index: 0 !important
 }
 
-.glass {
-    background-color: rgba(255, 255, 255, 0.4) !important;
-    background-image: linear-gradient(to bottom right, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0)) !important;
-    backdrop-filter: blur(7px);
+.leaflet-control-attribution {
+    color: white !important;
+    background: none !important;
+    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5) !important;
+    width: 22vw !important;
 }
+
+.leaflet-container a {
+    color: white !important;
+    text-overflow: ellipsis !important;
+}
+
+
+.glass {
+    background-color: rgba(230, 230, 230, 0.4) !important;
+    background-image: linear-gradient(to bottom right, rgba(230, 230, 230, 0.2), rgba(230, 230, 230, 0)) !important;
+    backdrop-filter: blur(7px);
+    -webkit-backdrop-filter: blur(7px)!important;
+    border: 1px solid rgba(230, 230, 230, 0.5) !important;
+    
+} 
 
 .geosearch-control {
     position: absolute;
@@ -52,7 +68,7 @@
 }
 
 .geosearch-input {
-    width: 200px;
+    width: 230px;
     padding: 6px;
     border: 1px solid #ddd;
     border-radius: 4px;
@@ -106,4 +122,50 @@
     margin: 0 !important;
 }
 
+.pulsating-marker {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    width: 30px;
+    height: 30px;
+
+    &:before {
+        content: '';
+        position: relative;
+        display: block;
+        width: 300%;
+        height: 300%;
+        box-sizing: border-box;
+        margin-left: -100%;
+        margin-top: -100%;
+        border-radius: 45px;
+        background-color: #01a4e9;
+        animation: pulse-ring 1.25s cubic-bezier(0.215, 0.61, 0.355, 1) infinite;
+    }
+
+    &:after {
+        content: '';
+        position: absolute;
+        left: 0;
+        top: 0;
+        display: block;
+        width: 100%;
+        height: 100%;
+        background-color: white;
+        border-radius: 15px;
+        box-shadow: 0 0 8px rgba(0, 0, 0, .3);
+    }
+}
+
+@keyframes pulse-ring {
+    0% {
+        transform: scale(.33);
+    }
+
+    80%,
+    100% {
+        opacity: 0;
+    }
+}
 
