--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,171 +1,189 @@
-:root{
-    --blue: #187498;
+:root {
+  --blue: #187498;
 }
 
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-
 #root {
-    height: 100vh;
+  height: 100vh;
 }
 
 /*required map size*/
 .leaflet-container {
-    height: 100vh;
-    width: 100%;
+  height: 100vh;
+  width: 100%;
 }
 
 .leaflet-control {
-    z-index: 0 !important
+  z-index: 0 !important;
 }
 
 .leaflet-pane {
-    z-index: 0 !important
+  z-index: 0 !important;
 }
 
 .leaflet-top,
 .leaflet-bottom {
-    z-index: 0 !important
+  z-index: 0 !important;
 }
 
 .leaflet-control-attribution {
-    color: white !important;
-    background: none !important;
-    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5) !important;
-    width: 22vw !important;
+  color: white !important;
+  background: none !important;
+  text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5) !important;
+  width: 22vw !important;
 }
 
 .leaflet-container a {
-    color: white !important;
-    text-overflow: ellipsis !important;
+  color: white !important;
+  text-overflow: ellipsis !important;
 }
 
-
 .glass {
-    background-color: rgba(230, 230, 230, 0.4) !important;
-    background-image: linear-gradient(to bottom right, rgba(230, 230, 230, 0.2), rgba(230, 230, 230, 0)) !important;
-    backdrop-filter: blur(7px);
-    -webkit-backdrop-filter: blur(7px)!important;
-    border: 1px solid rgba(230, 230, 230, 0.5) !important;
-    
-} 
+  background-color: rgba(230, 230, 230, 0.4) !important;
+  backdrop-filter: blur(7px);
+  -webkit-backdrop-filter: blur(7px) !important;
+}
 
 .geosearch-control {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    z-index: 1000;
-    background: white;
-    padding: 8px;
-    border-radius: 4px;
-    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.2);
-    pointer-events: "auto";
-    cursor: "none";
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  z-index: 1000;
+  background: white;
+  padding: 8px;
+  border-radius: 4px;
+  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.2);
+  pointer-events: "auto";
+  cursor: "none";
 }
 
 .geosearch-input {
-    width: 230px;
-    padding: 6px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
+  width: 230px;
+  padding: 6px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
 }
 
 .suggestions {
-    margin-top: 8px;
+  margin-top: 8px;
 }
 
 .suggestion {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 15px;
-    border-bottom: 1px solid #f1f1f1;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px;
+  border-bottom: 1px solid #f1f1f1;
 }
 
 .suggestion span {
-    font-size: 0.9em;
+  font-size: 0.9em;
 }
 
 .suggestion button {
-    padding: 4px 6px;
-    font-size: 0.9em;
-    cursor: pointer;
-    background-color: #0078d4;
-    color: white;
-    border: none;
-    border-radius: 4px;
+  padding: 4px 6px;
+  font-size: 0.9em;
+  cursor: pointer;
+  background-color: #0078d4;
+  color: white;
+  border: none;
+  border-radius: 4px;
 }
 
-.leaflet-bar.leaflet-control{
-    border: none;
+.leaflet-bar.leaflet-control {
+  border: none;
 }
 
-.leaflet-control{
-    margin-top: 63px !important;
+.leaflet-control {
+  margin-top: 63px !important;
 }
 
-.app-bar{
-    min-height: 53px !important;
+.app-bar {
+  min-height: 53px !important;
 }
 
-.leaflet-popup-content-wrapper, .leaflet-popup-tip{
-    background-color: transparent !important;
-    box-shadow: none !important;
-    
+.leaflet-popup-content-wrapper {
+  background-color: transparent !important;
+  box-shadow: none !important;
 }
 
-.leaflet-popup-content, .leaflet-popup-content p{
-    margin: 0 !important;
+.leaflet-popup-content,
+.leaflet-popup-content p {
+  margin: 0 !important;
+}
+
+.leaflet-popup-tip-container {
+  height: 56px;
+  overflow: auto;
+}
+
+.leaflet-popup-tip {
+  width: 4px;
+  height: 56px;
+  padding: 1px;
+  margin: 0px auto 0;
+  pointer-events: auto;
+  transform: rotate(0deg);
+  background: var(--joy-palette-primary-500, #0b6bcb);
+  box-shadow: none;
+}
+
+.regular-marker {
+  height: 15px;
+  width: 30px;
+  background-color: var(--joy-palette-primary-500, #0b6bcb);
+  border-radius: 50%;
+  box-sizing: border-box;
 }
 
 .pulsating-marker {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  width: 30px;
+  height: 30px;
+
+  &:before {
+    content: "";
+    position: relative;
+    display: block;
+    width: 300%;
+    height: 300%;
+    box-sizing: border-box;
+    margin-left: -100%;
+    margin-top: -100%;
+    border-radius: 45px;
+    background-color: #01a4e9;
+    animation: pulse-ring 1.25s cubic-bezier(0.215, 0.61, 0.355, 1) infinite;
+  }
+
+  &:after {
+    content: "";
     position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translateX(-50%) translateY(-50%);
-    width: 30px;
-    height: 30px;
-
-    &:before {
-        content: '';
-        position: relative;
-        display: block;
-        width: 300%;
-        height: 300%;
-        box-sizing: border-box;
-        margin-left: -100%;
-        margin-top: -100%;
-        border-radius: 45px;
-        background-color: #01a4e9;
-        animation: pulse-ring 1.25s cubic-bezier(0.215, 0.61, 0.355, 1) infinite;
-    }
-
-    &:after {
-        content: '';
-        position: absolute;
-        left: 0;
-        top: 0;
-        display: block;
-        width: 100%;
-        height: 100%;
-        background-color: white;
-        border-radius: 15px;
-        box-shadow: 0 0 8px rgba(0, 0, 0, .3);
-    }
+    left: 0;
+    top: 0;
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    border-radius: 15px;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
+  }
 }
 
 @keyframes pulse-ring {
-    0% {
-        transform: scale(.33);
-    }
+  0% {
+    transform: scale(0.33);
+  }
 
-    80%,
-    100% {
-        opacity: 0;
-    }
+  80%,
+  100% {
+    opacity: 0;
+  }
 }
-
