--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -39,7 +39,7 @@
   color: white !important;
   background: none !important;
   text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5) !important;
-  width: 22vw !important;
+  width: 15vw !important;
 }
 
 .leaflet-container a {
@@ -194,7 +194,7 @@
 
 .legend-container {
   position: absolute;
-  bottom: 25px;
+  bottom: 20px;
   right: 10px;
   background: #e3effb !important;
   border-radius: 5px;
@@ -219,6 +219,8 @@
 
 .legend-scale {
   background-color: #696969 !important;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
 
 /* Standard size for both legends */
@@ -229,6 +231,8 @@
   display: flex;
   flex-direction: column-reverse; /* Ensures values go from bottom to top */
   align-items: center;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
 
 /* Discrete Mode: List items should have no gaps */
