Update package dependencies, enhance UI components, and refactor SVG assets
- Added `convert-units` package to manage unit conversions.
- Improved CSS styles for leaflet popups to ensure better responsiveness.
- Refactored SVG assets for temperature and weather icons to enhance visual consistency.
- Cleaned up unused imports and optimized component structures in various files for better maintainability.
- Updated `ForecastContainer` and `ForecastTable` components to improve state management and UI interactions.

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -110,6 +110,10 @@
   min-height: 53px !important;
 }
 
+.leaflet-popup-content {
+  width: auto !important;
+}
+
 .leaflet-popup-content-wrapper {
   background-color: transparent !important;
   box-shadow: none !important;
