Enhance unit conversion and UI components for weather data display
- Implement unit conversion logic in ForecastValue component to support temperature, rainfall, and wind speed adjustments based on user-selected units.
- Update PopupContent to integrate ForecastValue and ToggleUnits components for dynamic unit display and toggling.
- Refactor CSS styles for improved visual consistency in leaflet popups and links.
- Modify Base and Labels components to handle access token more securely and efficiently.
- Clean up unused imports and console logs across various components for better code quality.

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -35,13 +35,19 @@
   z-index: 999 !important;
 }
 
+.leaflet-container a {
+  color: #12467b;
+  text-decoration-color: #12467b;
+  text-decoration-style: dotted;
+}
+
 .leaflet-control-attribution {
   color: white !important;
   background: none !important;
   text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5) !important;
 }
 
-.leaflet-container a {
+.leaflet-control-attribution a {
   color: white !important;
   text-overflow: ellipsis !important;
 }
@@ -111,7 +117,7 @@
 }
 
 .leaflet-popup-content {
-  width: auto !important;
+  width: 350px !important;
 }
 
 .leaflet-popup-content-wrapper {
