--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -59,7 +59,7 @@
 }
 
 .glass {
-  background-color: rgba(230, 230, 230, 0.4) !important;
+  background-color: rgba(255, 255, 255, 0.4) !important;
   backdrop-filter: blur(7px);
   -webkit-backdrop-filter: blur(7px) !important;
 }
@@ -211,7 +211,7 @@
   position: absolute;
   bottom: 20px;
   right: 10px;
-  background: #e3effb !important;
+  /* background: #e3effb !important; */
   border-radius: 5px;
   font-family: Arial, sans-serif;
   display: flex;
