--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -27,6 +27,10 @@
   z-index: 450 !important;
 }
 
+.esri-dynamic-attribution {
+  user-select: none;
+}
+
 .leaflet-top {
   z-index: 0 !important;
 }
@@ -219,6 +223,7 @@
   flex-direction: column;
   align-items: center;
   z-index: 999; /* Ensures the legend stays on top */
+  user-select: none;
 }
 
 .legend-units-container {
