Add new weather icons, update package dependencies, and enhance UI components
- Introduced new weather icons in PNG format for improved visual representation.
- Updated `package.json` and `package-lock.json` to include `@react-pdf/renderer` and `react-router-dom` for enhanced functionality.
- Enhanced styles in `styles.css` for better user experience, including adjustments to backdrop filters and new chip styles.
- Refactored `ForecastContainer` and `ForecastTable` components to support new download functionality and improved state management.
- Cleaned up and optimized imports across various components for better maintainability.
- Removed unused logo assets to streamline the project.

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -65,7 +65,7 @@
 
 .glass {
   background-color: rgba(255, 255, 255, 0.4) !important;
-  backdrop-filter: blur(7px);
+  backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(7px) !important;
 }
 
@@ -416,4 +416,8 @@
   background: transparent !important;
   text-shadow: initial !important;
   color: white !important;
+}
+
+.today-chip {
+  color: "#32383E" !important;
 }
