--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -59,6 +59,9 @@
   background: none !important;
   text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5) !important;
   font-size: 10px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .leaflet-control-attribution a {
@@ -217,9 +220,9 @@
 }
 
 .legend-container {
-  position: absolute;
+  /* position: absolute;
   bottom: 20px;
-  right: 10px;
+  right: 10px; */
   /* background: #e3effb !important; */
   border-radius: 5px;
   font-family: Arial, sans-serif;
