--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,3 +1,16 @@
+/* commissioner-latin-wght-normal */
+@font-face {
+  font-family: "Commissioner Variable";
+  font-style: normal;
+  font-display: swap;
+  font-weight: 100 900;
+  src: url(https://cdn.jsdelivr.net/fontsource/fonts/commissioner:vf@latest/latin-wght-normal.woff2)
+    format("woff2-variations");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193,
+    U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
 :root {
   --blue: #187498;
 }
@@ -220,13 +233,10 @@
 }
 
 .legend-container {
-  /* position: absolute;
-  bottom: 20px;
-  right: 10px; */
-  /* background: #e3effb !important; */
   border-radius: 5px;
-  font-family: Arial, sans-serif;
+  font-family: "Commissioner Variable", sans-serif;
   display: flex;
+  flex-shrink: 0;
   flex-direction: column;
   align-items: center;
   z-index: 1200;
