Update assets and refactor components for improved performance
- Replaced multiple image assets with updated versions for better visual quality.
- Removed unused components such as Base, CustomIcons, DateNavigation, and others to streamline the codebase.
- Refactored the Map component to reorganize imports and enhance structure.
- Added media query styles in styles.css for better responsiveness on smaller screens.

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -267,6 +267,12 @@
   text-decoration-style: dotted !important;
 }
 
+@media (max-width: 768px) {
+  .legend-units {
+    text-decoration-color: white !important;
+  }
+}
+
 .legend-scale {
   background-color: #696969 !important;
   border-bottom-left-radius: 5px;
